# fastapi_actions

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: main.py  models.py
tests/: test_acceptance.py  test_unit.py
