[tool.poetry]
name = "fastapi-task-manager"
version = "0.1.0"
description = "FastAPI test project, for codecoverage actions"
authors = ["kk nair <karunakaran99@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
